File->Open is causing problems, debug after alpha release

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -376,6 +376,9 @@
    <addaction name="menuHelp"/>
   </widget>
   <action name="actionOpen">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Open wallet</string>
    </property>
