Embed Tor executable for static Mac OS builds

--- a/src/assets_macos_tor.qrc
+++ b/src/assets_macos_tor.qrc
@@ -1,5 +1,6 @@
 <!DOCTYPE RCC><RCC version="1.0">
     <qresource prefix="/">
         <file>tor/tor</file>
+        <file>tor/libevent-2.1.7.dylib</file>
     </qresource>
 </RCC>
