XMRig tab - Simple mining GUI to download and run XMRig releases.

--- a/src/assets.qrc
+++ b/src/assets.qrc
@@ -96,6 +96,8 @@
     <file>assets/images/warning.png</file>
     <file>assets/images/xmrto_big.png</file>
     <file>assets/images/xmrto.png</file>
+    <file>assets/images/xmrig.ico</file>
+    <file>assets/images/xmrig.svg</file>
     <file>assets/images/zoom.png</file>
     <file>assets/mnemonic_25_english.txt</file>
     <file>assets/restore_heights_monero_mainnet.txt</file>
