--- a/src/assets_tor.qrc
+++ b/src/assets_tor.qrc
@@ -1,5 +1,5 @@
 <!DOCTYPE RCC><RCC version="1.0">
     <qresource prefix="/">
-        <file>tor/tor</file>
+        <file>assets/exec/tor</file>
     </qresource>
 </RCC>
