Add Reddit frontend onion address
Resolves #52

--- a/src/SettingsDialog.ui
+++ b/src/SettingsDialog.ui
@@ -535,6 +535,11 @@
            <string>teddit.net</string>
           </property>
          </item>
+         <item>
+          <property name="text">
+           <string>reddittorjg6rue252oqsxryoxengawnmo46qy4kyii5wtqnwfj4ooad.onion</string>
+          </property>
+         </item>
         </widget>
        </item>
        <item row="2" column="0">
