--- a/src/SettingsDialog.ui
+++ b/src/SettingsDialog.ui
@@ -527,7 +527,17 @@
          </item>
          <item>
           <property name="text">
+           <string>old.reddittorjg6rue252oqsxryoxengawnmo46qy4kyii5wtqnwfj4ooad.onion</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
            <string>reddit.com</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>reddittorjg6rue252oqsxryoxengawnmo46qy4kyii5wtqnwfj4ooad.onion</string>
           </property>
          </item>
          <item>
