About: foxes don't have feathers

--- a/src/dialog/AboutDialog.ui
+++ b/src/dialog/AboutDialog.ui
@@ -31,7 +31,7 @@
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
-        <widget class="QLabel" name="aboutImage">
+        <widget class="ClickableLabel" name="aboutImage">
          <property name="text">
           <string>image</string>
          </property>
@@ -232,6 +232,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>ClickableLabel</class>
+   <extends>QLabel</extends>
+   <header>components.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
